--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "forge-apis": "^0.9.9"
+  },
+  "devDependencies": {
+    "@types/forge-viewer": "^7.69.9"
   }
 }
